--- a/dockerFile/hls.conf
+++ b/dockerFile/hls.conf
@@ -13,7 +13,7 @@ rtmp {
             live on;
             # turn on hls service
             hls on;
-            hls_path /tmp/hls;
+            hls_path /kideyes/hls;
             hls_fragment 15s;
             hls_playlist_length 60;
             hls_type event;
@@ -27,7 +27,7 @@ http {
     server {
         listen 8080;
         location /hls {
-            root /tmp;
+            root /kideyes;
             types {
                 application/vnd.apple.mpegurl m3u8;
                 video/mp2t ts;
